--- a/.semantic/.gitignore
+++ b/.semantic/.gitignore
@@ -2,8 +2,8 @@ node_modules/
 test/coverage/
 coverage/
 src/**/site/
-theme.config
-semantic.json
+# theme.config
+# semantic.json
 tasks/**/oauth.js
 dist/
 
