--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,5 +21,5 @@ jobs:
 
     - name: publish
       run: |
-        docker login -u sudomoon -p $${{ env.docker_pat }}
+        echo "$${{ env.docker_pat }}" | docker login -u sudomoon --password-stdin
         docker push sudomoon/decipher:latest
