--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
       env:
-        DOCKER_PASSWORD: ${{ dev.DOCKER_HUB_TOKEN }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TOKEN }}
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ env.DOCKER_PASSWORD }}
